Use Java11 methods